# redis-sentinel-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: client.rs  lib.rs
tests/: sentinel.rs
tests/support/: mod.rs  sentinel.rs  server.rs
